5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1716_2496.log
== TEST (2019-05-07 16:29:51) 
-- CODE:
c=1
x=float(input("Insira os numeros:"))
while(x!= -1):
	print(sum(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(sum(x))
TypeError: 'float' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:31:25) 
-- CODE:
c=1
x=float(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(c)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-524.0
1076.0
334.0
-8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:31:40) 
-- CODE:
c=1
x=float(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(c)

	x=float(input("Insira os numeros:"))
-- EXECUTION TIME:
0.167962
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-524.0
1076.0
334.0
-8.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1.0
1.0
1.0
1.0
1.0
1.0
1.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10954.0
32654.0
-10952.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:31:55) 
-- CODE:
c=1
x=float(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(c)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-524.0
1076.0
334.0
-8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:37:10) 
-- CODE:
c=
x=float(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(sum(c))

	x=float(input("Insira os numeros:"))
-- ERROR:
File "XXXX", line 1
    c=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:37:28) 
-- CODE:
c=0
x=float(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(sum(c))

	x=float(input("Insira os numeros:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(sum(c))
TypeError: 'float' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:37:43) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	c=x+1
	print(sum(c))

	x=float(input("Insira os numeros:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(sum(c))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:38:04) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	c=x+x
	print(c)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-1050
2150.0
666.0
-18.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:38:20) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	c=x+x
	print(c)

	x=float(input("Insira os numeros:"))
-- EXECUTION TIME:
0.456388
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-1050
2150.0
666.0
-18.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21906
65306.0
-21906.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:39:25) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	c=x+x
	print(c)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:40:03) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	
	print(c)

	x=int(input("Insira os numeros:"))
	c=x+x
-- OUTPUT:
0
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:40:25) 
-- CODE:
c=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	c=x+x
	print(c)

	x=int(input("Insira os numeros:"))
	c=x+x
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:48:07) 
-- CODE:
c=0
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:48:18) 
-- CODE:
c=0
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- EXECUTION TIME:
0.153388
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:48:23) 
-- CODE:
c=0
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:01) 
-- CODE:
c=0
soma=0
x=float(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:10) 
-- CODE:
c=0
soma=0
x=float(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:49:12) 
-- CODE:
c=0
soma=0
x=float(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=float(input("Insira os numeros:"))
-- EXECUTION TIME:
0.116082
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525.0
550.0
883.0
874.0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953.0
43606.0
32653.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:43) 
-- CODE:
soma=0
x=float(input("Insira os numeros:"))
while(x== -1):
	soma=x+soma
	print(soma)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:48) 
-- CODE:
soma=0
x=float(input("Insira os numeros:"))
while(x== -1):
	soma=x+soma
	print(soma)

	x=float(input("Insira os numeros:"))
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:07) 
-- CODE:
soma=0
x=input("Insira os numeros:")
while(x== -1):
	soma=x+soma
	print(soma)

	x=input("Insira os numeros:")
-- OUTPUT:
-525.0
550.0
883.0
874.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:12) 
-- CODE:
soma=0
x=input("Insira os numeros:")
while(x== -1):
	soma=x+soma
	print(soma)

	x=input("Insira os numeros:")
-- EXECUTION TIME:
0.153905
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:53:12) 
-- CODE:

soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:00:18) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:00:50) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:01:02) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- EXECUTION TIME:
0.461321
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:02:40) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:05:11) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- EXECUTION TIME:
0.144546
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:49) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:03) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma
	print(soma)

	x=int(input("Insira os numeros:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:15:19) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma


	x=int(input("Insira os numeros:"))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:15:27) 
-- CODE:
soma=0
x=int(input("Insira os numeros:"))
while(x!= -1):
	soma=x+soma


	x=int(input("Insira os numeros:"))
print(soma)
-- EXECUTION TIME:
0.196598
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
